--- a/notifier/templates/home.html
+++ b/notifier/templates/home.html
@@ -9,6 +9,7 @@
     <p>Notifications</p>
     <ul id="notifylist"></ul>
     <script>
+
     document.addEventListener('DOMContentLoaded', function() {
       const webSocketBridge = new channels.WebSocketBridge();
       const nl = document.querySelector("#notifylist");
@@ -22,8 +23,17 @@
           nl.appendChild(el);
         }
       })
-      document.ws = webSocketBridge; /* for debugging */
+      document.ws = webSocketBridge; // for debugging
     })
+    /*
+    var ws = new WebSocket("ws://127.0.0.1:8000/notifications/");
+    ws.onopen = function() {
+      console.log('open!')
+      ws.send("Hello!");
+    }
+    ws.onmessage = function(data) {
+      console.log('receive:' + data)
+    }*/
     </script>
   </body>
 </html>
